Se explica como ejecutar el programa